# iq-mcp

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CHANGELOG.md  CHANGELOG_VISUALIZER.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  PR_DESCRIPTION.md  README.md  REVIEW_CHANGES.md  SECURITY_INCIDENT.md  TEST_SUITE_SUMMARY.md  VISUALIZER.md  devcontainers.json  docker-compose.prod.yml  docker-compose.yml  example.env  example.jsonl  graph.html  instructions.md  main.py  memory_dev.jsonl  pyproject.toml  railway.toml  requirements.txt  run_tests.py  security_scan.md  test.json
.cursor/: cursor_review_recent_code_changes_for_q.md  mcp.json
.cursor/plans/: robust-forging-manatee-revised.md  robust-forging-manatee.md
deploy/: deploy.sh  env.production.template  pull-and-deploy.sh  push-and-deploy.sh  push-image.sh  quick-deploy.sh  rotate-service-key.sh  setup-ssl.sh  setup-vm.sh  vm-logs.sh  vm-ssh.sh
docs/: ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLAUDE_DESKTOP_SOLUTION.md  DEVELOPMENT.md  FIXING_OAUTH_ISSUES.md  FastMCP_llms.md  LLM-COLLAB.md  LLM_COLLAB.md  OAUTH_DCR_SUCCESS.md  PROJECT-OVERVIEW.md  PROJECT_OVERVIEW.md  ROADMAP.md  SECURITY.md  SETTINGS_FLOW.md  SUPABASE_SCHEMA.md  WORKFLOWS.md  WORKING_SOLUTION.md  brainstorming.md  engineering-notes.md  fastmcp-authentication.md  fastmcp-oauth-proxy.md  fastmcp_2.11_full_docs.md  files.md  supabase-mcp-authentication.md
scripts/: rotate-service-key.ps1  rotate-service-key.sh
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_auth.py  test_graph.py  test_integration.py  test_server_tools.py
(+54 files in other folders)
