[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iq-mcp"
version = "1.3.1"
description = "Enhanced version of the original knowledge graph memory MCP server."
readme = "README.md"
license = {text = "Non-Commercial"}
authors = [
    {name = "study-flamingo", email = "y9agf5y5@anonaddy.me"}
]
keywords = ["mcp", "memory", "knowledge-graph", "persistence", "observations", "claude", "ai", "python", "mcp-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.1",
    "regex>=2025.8.29",
    "typing-extensions>=4.5.0",
    "supabase>=2.18.1",
]

[project.urls]
Homepage = "https://github.com/study-flamingo/mcp-server-memory-temporal"
Repository = "https://github.com/study-flamingo/mcp-server-memory-temporal.git"
Issues = "https://github.com/study-flamingo/mcp-server-memory-temporal/issues"

[project.scripts]
iq-mcp = "mcp_knowledge_graph.__main__:main"
iq-mcp-visualize = "mcp_knowledge_graph.visualize:main"
iq-mcp-init = "mcp_knowledge_graph.seed_memory:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]
